# server/src/B1ngo.Application.Features/ReferenceData/GetReferenceDataResponse.cs
@@ -2,7 +2,4 @@ using B1ngo.Application.Common;
 
 namespace B1ngo.Application.Features.ReferenceData;
 
-public sealed record GetReferenceDataResponse(
-    IReadOnlyList<SessionTypeDto> SessionTypes,
-    IReadOnlyList<GrandPrixDto> GrandPrix
-);
+public sealed record GetReferenceDataResponse(IReadOnlyList<int> Seasons, IReadOnlyList<GrandPrixDto> GrandPrix);
